# AI-ML-OP-FINAL-PROJECT

./: .gitignore  pyproject.toml  setup.sh
app/: __init__.py  example_client.py  main.py
mlflow_setup/: SETUP_GUIDE.md  fix_host_validation.sh  fix_mlflow_host_validation.sh  remote_server.sh
reports/: h2o_leaderboard.csv
scripts/: 01_clean_and_split.py  02_h2o_automl.py  __init__.py  drift_analysis.py  train_gbm.py  train_glm.py  train_xgboost.py
